# codepipeline-monorepo-webhook

./: .gitignore  LICENSE  Pipfile  README.md  package-lock.json  package.json  pyproject.toml  serverless.conf.js  serverless.conf.yml  serverless.dev.conf.yml  serverless.prd.conf.yml  serverless.yml
webhook/: exceptions.py  handler.py  pull_request_handler.py  push_handler.py
webhook/tests/: test_webhook_handler.py  test_webhook_handler_structure1.py  test_webhook_handler_structure2.py  test_webhook_handler_structure3.py  test_webhook_handler_structure4.py  webhook_fixture.json  webhook_fixture_structure1.json  webhook_fixture_structure2.json  webhook_fixture_structure3.json  webhook_fixture_structure4.json
