[[tool.poetry.source]]
name = "jfrog"
url = "https://moiadev.jfrog.io/moiadev/api/pypi/pypi/simple"

[tool.poetry]
name = "codepipeline-monorepo-webhook"
version = "1.0.0"
description = "A webhook handler that triggers AWS CodePipelines for mono repos, implemented as a serverless AWS Lambda function"
authors = ["Marcel Mindemann <12549786+m1nde@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
